<resources>
    <string name="app_name">Challenge3</string>
    <string name="start">Start</string>
    <string name="score_0_life_3_timer_60">Score: 0 Life: 3 Timer: 60</string>
    <string name="textview">TextView</string>
    <string name="please_write_your_answer">Please write your answer</string>
    <string name="ok">OK</string>
    <string name="next_question">Next question</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="play_again">Play again</string>
    <string name="exit">Exit</string>
    <string name="congratulation">Congratulation</string>
    <string name="score_0">Score_0</string>


</resources>