<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
   >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="#00BCD4"
        android:elevation="4dp"
        app:title="My App"
        app:titleTextColor="#FFFFFF" />

    <TextView
        android:id="@+id/tvCongrat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/congratulation"
        android:textColor="#E67022"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFinalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvCongrat"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/score_0"
        android:textColor="#E67022"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFinalScore"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="99dp"
        android:layout_marginEnd="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlayAgain"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="#00BCD4"
            android:text="@string/play_again"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:background="#00BCD4"
            android:text="@string/exit"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

    </LinearLayout>

</RelativeLayout>
